# echo-drift

./: .gitignore  CMakeLists.txt  README.md  main.cpp
src/: Animation.hpp  Application.cpp  Application.hpp  Background.cpp  Background.hpp  Defines.hpp  Entity.cpp  Entity.hpp  GameManager.cpp  GameManager.hpp  GameObject.cpp  GameObject.hpp  GameSettings.hpp  Input.cpp  Input.hpp  Projectile.cpp  Projectile.hpp  ResourceManager.hpp  Resources.hpp  SpaceShip.cpp  SpaceShip.hpp  Tools.hpp  Utils.hpp
src/comps/: CAnimatedSprite.hpp  CCollider.cpp  CCollider.hpp  CDespawner.hpp  CGameManager.cpp  CGameManager.hpp  CMultiSprite.hpp  CProjectile.hpp  CSpaceShip.cpp  CSpaceShip.hpp  CSpeed.hpp  CSprite.cpp  CSprite.hpp  CTransform.cpp  CTransform.hpp
